--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@react-navigation/stack": "^6.3.29",
     "expo": "~51.0.26",
     "expo-linear-gradient": "^13.0.2",
+    "expo-splash-screen": "~0.27.5",
     "expo-status-bar": "~1.12.1",
     "prop-types": "^15.8.1",
     "react": "18.2.0",
@@ -28,7 +29,7 @@
     "react-native-country-picker-modal": "^2.0.0",
     "react-native-dotenv": "^3.4.11",
     "react-native-elements": "^3.4.3",
-    "react-native-gesture-handler": "^2.16.1",
+    "react-native-gesture-handler": "~2.16.1",
     "react-native-maps": "1.14.0",
     "react-native-paper": "^5.12.3",
     "react-native-reanimated": "^3.10.1",
@@ -40,8 +41,7 @@
     "react-native-svg-transformer": "^1.5.0",
     "react-native-vector-icons": "^10.1.0",
     "react-native-web": "^0.19.12",
-    "styled-components": "^6.1.11",
-    "expo-splash-screen": "~0.27.5"
+    "styled-components": "^6.1.11"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
