--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-navigation/material-bottom-tabs": "^6.2.28",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/stack": "^6.3.29",
+    "axios": "^1.7.7",
     "expo": "~51.0.31",
     "expo-linear-gradient": "^13.0.2",
     "expo-splash-screen": "~0.27.5",
