--- a/package.json
+++ b/package.json
@@ -42,7 +42,8 @@
     "react-native-svg-transformer": "^1.5.0",
     "react-native-vector-icons": "^10.1.0",
     "react-native-web": "^0.19.12",
-    "styled-components": "^6.1.11"
+    "styled-components": "^6.1.11",
+    "@react-native-async-storage/async-storage": "1.23.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
