--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "luxury-rider-app-rider",
+  "name": "luxury-rideUser",
   "version": "1.0.0",
   "main": "expo/AppEntry.js",
   "scripts": {
