--- a/eas.json
+++ b/eas.json
@@ -3,10 +3,12 @@
     "version": ">= 10.0.3"
   },
   "build": {
-    "development": {
-      "developmentClient": true,
-      "distribution": "internal"
-    },
+    "production": {
+      "android": {
+        "buildType": "apk"
+      }
+    }
+  },
     "preview": {
       "android": {
         "buildType": "apk"
